force-app/main/default/objects/line_item__c/line_item__c.object-meta.xml
<CustomObject>
    <label>line item</label>
    <nameField>
        <label>line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>line items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>