force-app/main/default/objects/line_item__c/fields/Line_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Total__c</fullName>
    <formula>Unit_Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>