force-app/main/default/objects/line_item__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>line items</relationshipLabel>
    <relationshipName>line_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>