force-app/main/default/objects/line_item__c/validationRules/Validate_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;=0  || Quantity__c &gt; Merchandise__r.Quantity__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>You can&apos;t order more items than are in stock</errorMessage>
</ValidationRule>